--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="image/favicon.png" type="image/x-icon">
+    
 </head>
 <body>
     <!-- Preloader -->
@@ -208,7 +209,7 @@
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="image/Screenshot 2025-04-23 110304.png " alt="Edoc">
+                        <img src="image/doctappo.png" alt="Edoc">
                         <div class="project-links">
                             <a   target="_blank" class="project-link"><i class="fas fa-external-link-alt"></i></a>
                             <a  target="_blank" class="project-link"><i class="fab fa-github"></i></a>
