--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <!-- Profile Photo Container -->
         <div class="hero-image">
             <div class="profile-photo-container">
-                <img src="./image/WhatsApp Image 2025-04-22 at 00.46.15_e00abf09.jpg" alt="Harhsit Panwar" class="profile-photo">
+                <img src="./image/profile.png" alt="Harhsit Panwar" class="profile-photo">
                 <div class="photo-frame"></div>
                 <div class="tech-icons">
                     <i class="fab fa-react tech-icon"></i>
