--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                     </div>
                 </div>
                 
-                <div class="project-card">
+                <!-- <div class="project-card">
                     <div class="project-image">
                         <img src="image/explore_india.jpg" alt="Explore India">
                         <div class="project-links">
@@ -252,9 +252,9 @@
                             <p>Improved responsive design, layout structuring, and JavaScript-based interactivity skills.</p>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
-                <div class="project-card">
+                <!-- <div class="project-card">
                     <div class="project-image">
                         <img src="image/tic-tac-toe.jpg" alt="Explore India">
                         <div class="project-links">
@@ -275,7 +275,7 @@
                             <p>Gained hands-on experience in building interactive UIs with React, using state and props to manage game logic, conditional rendering, and component-based architecture.</p>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
